[package]
name = "stribog"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
error-chain = "0.12.4"
walkdir = "2.3.2"
[target.'cfg(unix)'.dependencies]
daemonize = "0.4.1"
